Update HTML comments

--- a/qformat.html
+++ b/qformat.html
@@ -71,7 +71,7 @@
                                 <div class="col w25">
                                     <label for="num_bits">Word size in bits (<em>m+n</em>)</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <select id="num_bits">
                                         <option value="16">16</option>
                                         <option value="24" selected>24</option>
@@ -84,7 +84,7 @@
                                 <div class="col w25">
                                     <label for="num_frac_bits">Fractional bits (<em>n</em>)</label>
                                 </div><!--
-                            ---><div class="col w75">
+                             --><div class="col w75">
                                     <select id="num_frac_bits">
                                         <option value="23" selected>23</option>
                                     </select>
@@ -95,7 +95,7 @@
                                 <div class="col w25">
                                     <label for="signed">Signed?</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <input id="signed" type="checkbox" checked>
                                 </div>
                             </div>
@@ -104,7 +104,7 @@
                                 <div class="col w25">
                                     <label for="format">Integer format</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <select id="format">
                                         <option value="hex" selected>Hexadecimal</option>
                                         <option value="dec">Decimal</option>
@@ -117,7 +117,7 @@
                                 <div class="col w25">
                                     <label for="maxfloat">Maximum float value</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <input id="maxfloat" type="text" value="0" disabled>
                                 </div>
                             </div>
@@ -126,7 +126,7 @@
                                 <div class="col w25">
                                     <label for="minfloat">Minimum float value</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <input id="minfloat" type="text" value="0" disabled>
                                 </div>
                             </div>
@@ -181,7 +181,7 @@
                                 <div class="col w25">
                                     <label for="integer">Integer (<span id="labelformat">hexadecimal</span>)</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <input id="integer" type="text" value="0" maxlength="6">
                                 </div>
                             </div>
@@ -190,7 +190,7 @@
                                 <div class="col w25">
                                     <label for="float">Float</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <input id="float" type="text" value="0">
                                 </div>
                             </div>
@@ -199,7 +199,7 @@
                                 <div class="col w25">
                                     <label for="realfloat">Fixed-point value</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <input id="realfloat" type="text" value="0" disabled>
                                 </div>
                             </div>
@@ -208,7 +208,7 @@
                                 <div class="col w25">
                                     <label for="floaterror">Representation error</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <input id="floaterror" type="text" value="0" disabled>
                                 </div>
                             </div>
@@ -217,7 +217,7 @@
                                 <div class="col w25">
                                     <label for="errordb">Representation error (dB)</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <input id="errordb" type="text" value="0" disabled>
                                 </div>
                             </div>
@@ -252,7 +252,7 @@
                                 <div class="col w25">
                                     <label for="left_operand_int">Integer value (<span id="labelformat_lhs">hexadecimal</span>)</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <input id="left_operand_int" type="text" value="0">
                                 </div>
                             </div>
@@ -261,7 +261,7 @@
                                 <div class="col w25">
                                     <label for="left_operand_float">Float value</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <input id="left_operand_float" type="text" value="0">
                                 </div>
                             </div>
@@ -270,7 +270,7 @@
                                 <div class="col w25">
                                     <label for="left_operand_num_bits">Word size in bits (<em>m+n</em>)</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <select id="left_operand_num_bits">
                                         <option value="16">16</option>
                                         <option value="24" selected>24</option>
@@ -283,7 +283,7 @@
                                 <div class="col w25">
                                     <label for="left_operand_num_frac_bits">Fractional bits (<em>n</em>)</label>
                                 </div><!--
-                            ---><div class="col w75">
+                             --><div class="col w75">
                                     <select id="left_operand_num_frac_bits">
                                         <option value="23" selected>23</option>
                                     </select>
@@ -294,7 +294,7 @@
                                 <div class="col w25">
                                     <label for="left_operand_signed">Signed?</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <input id="left_operand_signed" type="checkbox" checked>
                                 </div>
                             </div>
@@ -303,7 +303,7 @@
                                 <div class="col w25">
                                     <label for="left_operand_format">Integer format</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <select id="left_operand_format">
                                         <option value="hex" selected>Hexadecimal</option>
                                         <option value="dec">Decimal</option>
@@ -324,7 +324,7 @@
                                 <div class="col w25">
                                     <label for="operator">Operator</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <select id="operator">
                                         <option value="add" selected>Add</option>
                                         <option value="subtract">Subtract</option>
@@ -342,7 +342,7 @@
                                         is within the range of the output Q-format. This may change the sign and magnitude of the
                                         result.">Behaviour</span></label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <select id="behaviour">
                                         <option value="saturate" selected>Saturate</option>
                                         <option value="wrap">Wrap</option>
@@ -356,7 +356,7 @@
                                         used for the calculation result. The precision can be reduced by choosing the right
                                         shift below.">Calculation size in bits (<em>m+n</em>)</span></label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <select id="arithmetic_out_num_bits">
                                         <option value="16">16</option>
                                         <option value="24">24</option>
@@ -375,7 +375,7 @@
                                         arithmetic right shift after saturation or rounding.">
                                         Right shift result</span></label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <select id="arithmetic_right_shift">
                                         <option value="0" selected>0</option>
                                     </select>
@@ -386,7 +386,7 @@
                                 <div class="col w25">
                                     <label for="right_shift_round">Right shift with rounding?</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <input id="right_shift_round" type="checkbox" checked>
                                 </div>
                             </div>
@@ -407,7 +407,7 @@
                                 <div class="col w25">
                                     <label for="right_operand_int">Integer value (<span id="labelformat_rhs">hexadecimal</span>)</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <input id="right_operand_int" type="text" value="0">
                                 </div>
                             </div>
@@ -416,7 +416,7 @@
                                 <div class="col w25">
                                     <label for="right_operand_float">Float value</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <input id="right_operand_float" type="text" value="0">
                                 </div>
                             </div>
@@ -425,7 +425,7 @@
                                 <div class="col w25">
                                     <label for="right_operand_num_bits">Word size in bits (<em>m+n</em>)</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <select id="right_operand_num_bits">
                                         <option value="16">16</option>
                                         <option value="24" selected>24</option>
@@ -438,7 +438,7 @@
                                 <div class="col w25">
                                     <label for="right_operand_num_frac_bits">Fractional bits (<em>n</em>)</label>
                                 </div><!--
-                            ---><div class="col w75">
+                             --><div class="col w75">
                                     <select id="right_operand_num_frac_bits">
                                         <option value="23" selected>23</option>
                                     </select>
@@ -449,7 +449,7 @@
                                 <div class="col w25">
                                     <label for="right_operand_signed">Signed?</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <input id="right_operand_signed" type="checkbox" checked>
                                 </div>
                             </div>
@@ -458,7 +458,7 @@
                                 <div class="col w25">
                                     <label for="right_operand_format">Integer format</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <select id="right_operand_format">
                                         <option value="hex" selected>Hexadecimal</option>
                                         <option value="dec">Decimal</option>
@@ -479,7 +479,7 @@
                                 <div class="col w25">
                                     <label for="arithmetic_result_fixed">Result (Fixed-point)</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <input id="arithmetic_result_fixed" type="text" value="0" disabled>
                                 </div>
                             </div>
@@ -488,7 +488,7 @@
                                 <div class="col w25">
                                     <label for="arithmetic_result_int">Result (Hexadecimal)</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <input id="arithmetic_result_int" type="text" value="0" disabled>
                                 </div>
                             </div>
@@ -497,7 +497,7 @@
                                 <div class="col w25">
                                     <label for="arithmetic_result_float">Result (Float)</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <input id="arithmetic_result_float" type="text" value="0" disabled>
                                 </div>
                             </div>
@@ -506,7 +506,7 @@
                                 <div class="col w25">
                                     <label for="arithmetic_result_num_frac_bits">Fractional bits (<em>n</em>)</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <input id="arithmetic_result_num_frac_bits" type="text" value="0" disabled>
                                 </div>
                             </div>
@@ -515,7 +515,7 @@
                                 <div class="col w25">
                                     <label for="arithmetic_result_floaterror">Error</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <input id="arithmetic_result_floaterror" type="text" value="0" disabled>
                                 </div>
                             </div>
@@ -524,7 +524,7 @@
                                 <div class="col w25">
                                     <label for="arithmetic_result_errordb">Error (dB)</label>
                                 </div><!--
-                                ---><div class="col w75">
+                                 --><div class="col w75">
                                     <input id="arithmetic_result_errordb" type="text" value="0" disabled>
                                 </div>
                             </div>
