Add link to GitHub for issue reporting

--- a/qformat.html
+++ b/qformat.html
@@ -14,7 +14,7 @@
         <meta property="og:type" content="website" />
         <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
         <link rel="stylesheet" href="https://chummersone.github.io/assets/css/style.css?v=f6040d589f1187e6eaa1ec97f2b3af33299fb0ad">
-        <link rel="stylesheet" href="qformat.css?v=10">
+        <link rel="stylesheet" href="qformat.css?v=11">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"
                 integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
                 crossorigin="anonymous">
@@ -53,11 +53,13 @@
             <li>Perform arithmetic operations on fixed-point values.</li>
         </ul>
 
+        <p>Please <a href="https://github.com/chummersone/chummersone.github.io/issues">report any issues on GitHub</a>.</p>
+
         <div id="container">
             <div id="tabs">
                 <ul>
                 <li><a href="#converter">Converter</a></li>
-                <li><a href="#arithmetic">Calculator<sup><em>beta</em></sup></a></li>
+                <li><a href="#arithmetic">Calculator</a></li>
                 </ul>
                 <div class="tab-panel" id="converter">
 
